fixed form full width stretching

--- a/src/components/contact-form/contact-from.module.scss
+++ b/src/components/contact-form/contact-from.module.scss
@@ -1,10 +1,19 @@
-.form {
+.container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
   padding: 25px;
 
   width: 100%;
   max-width: 720px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 300px;
 }
 
 .form-element {
